Added show method

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -23,7 +23,7 @@
                         <% @acts.each do |act| %>
                             <tr class="activity">
                                 <td><p class="id"><%= act.id %></p></td>
-                                <td><p class="name"><%= act.name %></p></td>
+                                <td><p class="name"><%= link_to act.name, {:action => 'show', :id => act.id} %></p></td>
                                 <td><p class="duration"><%= act.duration %></p></td>
                                 <td><p class="user"><%= act.user %></p></td>
                                 <td><p class="timestamp"><%= act.created_at %></p></td>
