Added support for deleleting entries. Modified migration files so seeding is only needed when adding dummy entries, activity types are now hard coded into migration.

--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <head>
-    
+    <title>Activity View</title>
 </head>
 <body>
     <h1>Activities</h1>
@@ -10,7 +10,13 @@
             <p>Duration: <%= @act.duration %></p>
             <br>
             <p>Registered at <%= @act.created_at %> by <%= @act.user %></p>
-            <p class="Link"><%= link_to "Back", {:action => 'index'}%></p>
+            <br>
+            <p class="delete">
+                <%= link_to "Delete Entry", 
+                    {:action => 'delete', :id => @act.id},
+                    data: {:confirm => "Are you sure you want to delete #{@act.name}?"} %>
+            </p>
+            <p class="link"><%= link_to "Back", {:action => 'index'}%></p>
         </div>
     </div>
 </body>
