--- a/app/assets/stylesheets/activity_type.scss
+++ b/app/assets/stylesheets/activity_type.scss
@@ -1,6 +1,3 @@
-// Place all the styles related to the activity controller here.
+// Place all the styles related to the ActivityType controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.del {
-    color: red !important;
-}
