--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -17,6 +17,7 @@
                             <th>Duration (minutes)</th>
                             <th>Person Who Done It</th>
                             <th>Entry Time</th>
+                            <th>Delete Entry</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -27,6 +28,11 @@
                                 <td><p class="duration"><%= act.duration %></p></td>
                                 <td><p class="user"><%= act.user %></p></td>
                                 <td><p class="timestamp"><%= act.created_at %></p></td>
+                                <td><p class="delete">
+                                    <%= link_to "Delete", 
+                                    {:action => 'delete', :id => act.id},
+                                    data: {:confirm => "Are you sure you want to delete #{act.name}?"} %>
+                                </p></td>
                             </tr>
                         <% end %>
                     </tbody>
