--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -1,6 +1,18 @@
 // Place all the styles related to the activity controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table, th, td {
+    border: 1px solid #002054;
+}
+
 .del {
+    color: red !important;
+}
+.activitytable {
+    border: 1px solid black;
+    color: #012999;
+}
+.emptyerror {
     color: red !important;
 }
