--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -1,16 +1,19 @@
-<h1>Activities</h1>
 <div class="activity_controller">
+    <h1 class='pagetitle'>Activities</h1>
     <div class="container">
-        <h1><%= @act.id %>-<%= @act.name %></h1>
-        <p>Duration: <%= @act.duration %></p>
-        <br>
-        <p>Registered at <%= @act.created_at %> by <%= @act.user %></p>
-        <br>
-        <p class="delete">
-            <%= link_to "Delete Entry", 
-                {:action => 'delete', :id => @act.id},
-                data: {:confirm => "Are you sure you want to delete #{@act.name}?"} %>
-        </p>
-        <p class="link"><%= link_to "Back", {:action => 'index'}%></p>
+        <h2 class='infotitle'><%= @act.id %>-<%= @act.name %></h2>
+        <div id='activitycontainer'>
+            <p>Duration: <%= @act.duration %></p>
+            <br>
+            <p>Registered at <%= @act.created_at %> by <%= @act.user %></p>
+            <br>
+            <p class="delete">
+                <%= link_to "Delete Entry", 
+                    {:action => 'delete', :id => @act.id},
+                    data: {:confirm => "Are you sure you want to delete #{@act.name}?"},
+                    :class => 'delitem' %>
+            </p>
+            <p class="link"><%= link_to "Back", {:action => 'index'}%></p>
+        </div>
     </div>
 </div>
