--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -6,11 +6,7 @@ table, th, td {
     border: 1px solid #002054;
 }
 
-a {
-    color: #6dc2ff;
-}
-
-#activitycontainer {
+.activitycontainer {
     padding: 25px;
 }
 
