--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -1,16 +1,19 @@
-<h1>Log a New Activity</h1>
 <div class="activity_controller">
-    <div class="container">
-    <%= form_tag :action => 'create' do %>
-    <p><label for = "activity_type">Select Activity Type: </label></p>
-    <%= collection_select(:activities, :name, @act_types.all, :name, :name) %>
-    <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
-    <%= number_field 'activities', 'duration' %>
-    <p><label for = "activity_user">Enter Name of Person who Performed the Action: </label></p>
-    <%= text_field 'activities', 'user' %>
+    <H1 class='pagetitle'>Log a New Activity</H1>
     <br>
-    <%= submit_tag 'Log Data' %>
-    <% end -%>
+    <div class="container">
+        <div class='activitycontainer'>
+            <%= form_tag :action => 'create' do %>
+            <p><label for = "activity_type">Select Activity Type: </label></p>
+            <%= collection_select(:activities, :name, @act_types.all, :name, :name) %>
+            <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
+            <%= number_field 'activities', 'duration' %>
+            <p><label for = "activity_user">Enter Name of Person who Performed the Action: </label></p>
+            <%= text_field 'activities', 'user' %>
+            <br>
+            <%= submit_tag 'Log Data' %>
+            <% end%>
+        </div>
     </div>
     <p class="Back"><%= link_to "Back", {:action => 'index'}%></p>
 </div>
