--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -2,7 +2,7 @@
     <h1 class='pagetitle'>Activities</h1>
     <div class="container">
         <h2 class='infotitle'><%= @act.id %>-<%= @act.name %></h2>
-        <div id='activitycontainer'>
+        <div class='activitycontainer'>
             <p>Duration: <%= @act.duration %></p>
             <br>
             <p>Registered at <%= @act.created_at %> by <%= @act.user %></p>
