--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 <body>
   <header>
     <center><H2>Doing Together</H2></center>
+    <div id="headercontainer">
+        <div class="headerchild"><H4 class="lalign">A place to do things together.</H2></div>
+        <div class="headerchild"><H4 class="ralign"></H4></div>
+    </div>
   </header>
 <%= yield %>
 
