--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,7 +17,26 @@
     margin: 0;
     padding: 0;
 }
+
 header {
     display: block;
     background-color: #8da0d3;
+}
+a {
+    color: #6dc2ff;
+}
+
+#headercontainer {
+    display: flex;
+}
+
+.headerchild {
+    padding: 5px;
+    flex: 1;
+}
+.lalign {
+    text-align: left;
+}
+.ralign {
+    text-align: right;
 }
