Fixed back link and played with the CSS a little.

--- a/app/assets/stylesheets/activity.scss
+++ b/app/assets/stylesheets/activity.scss
@@ -28,3 +28,7 @@ table, th, td {
 .pagetitle {
     text-align: center;
 }
+.backitem {
+    border: solid 5px transparent;
+    border-left-color: #88bbdd;
+}
