--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -14,6 +14,7 @@
             <%= submit_tag 'Log Data' %>
             <% end%>
         </div>
+        <br>
+        <p class="link"><%= link_to 'Back', url_for(:back), :class => 'backitem'%></p>
     </div>
-    <p class="Back"><%= link_to "Back", {:action => 'index'}%></p>
 </div>
