--- a/app/assets/stylesheets/activity_type.scss
+++ b/app/assets/stylesheets/activity_type.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the ActivityType controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+table, th, td {
+    border: 1px solid #002054;
+}
+
+.activitytypecontainer {
+    padding: 25px;
+}
