Fixed some CSS and made the title link to the root page.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,6 +31,10 @@ a {
     display: flex;
 }
 
+.title {
+    color: black !important;
+    text-decoration: none;
+}
 .pagetitle {
     text-align: center;
 }
