--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <center><H2>Doing Together</H2></center>
+    <center><H2><%= link_to 'Doing Together', {:action => 'index', :controller => 'activity'}, :class => 'title'%></H2></center>
     <div id="headercontainer">
         <div class="headerchild"><H4 class="lalign">A place to do things <i>together</i>.</H2></div>
         <div class="headerchild"><H4 class="ralign"></H4></div>
