Fixed bug with links.

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -42,6 +42,7 @@
             </center>
             <br>
             <p class="link"><%= link_to "Log New Activity", {:action => 'new'}%></p>
+            <p class='link'><%= link_to "View Activity Types", {:action => 'index', :controller => 'activity_type'}%></p>
         <% end %>
     </div>
 </div>
