Fixed padding issue.

--- a/app/views/activity/index.html.erb
+++ b/app/views/activity/index.html.erb
@@ -1,7 +1,7 @@
 <div class="activity_controller">
     <h1 class="pagetitle">Activities</h1>
     <br>
-    <div class="container">
+    <div class="activitycontainer">
         <% if @acts.blank? %>
             <H2 class="emptyerror">There are no stored activities!</H2>
             <br>
