--- a/app/views/activity/new.html.erb
+++ b/app/views/activity/new.html.erb
@@ -4,14 +4,14 @@
     <div class="container">
         <div class='activitycontainer'>
             <%= form_tag :action => 'create' do %>
-            <p><label for = "activity_type">Select Activity Type: </label></p>
-            <%= collection_select(:activities, :name, @act_types, :name, :name) %>
-            <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
-            <%= number_field 'activities', 'duration' %>
-            <p><label for = "activity_user">Enter Name of Person who Performed the Action: </label></p>
-            <%= text_field 'activities', 'user' %>
-            <br>
-            <%= submit_tag 'Log Data' %>
+                <p><label for = "activity_type">Select Activity Type: </label></p>
+                <%= collection_select(:activities, :actid, @act_types, :id, :name) %>
+                <p><label for = "activity_duration">Enter Activity Duration in Minutes: </label></p>
+                <%= number_field 'activities', 'duration' %>
+                <p><label for = "activity_user">Enter Name of Person who Performed the Action: </label></p>
+                <%= text_field 'activities', 'user' %>
+                <br>
+                <%= submit_tag 'Log Data' %>
             <% end%>
         </div>
         <br>
