--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -14,9 +14,9 @@
             <%= link_to 'Edit Entry', {:action => 'edit', :id => @act.id} %>
             <br>
             <p class="delete">
-                <%= link_to "Delete Entry", 
-                    {:action => 'delete', :id => @act.id},
-                    data: {:confirm => "Are you sure you want to delete #{@actType.name}?"},
+                <%= link_to "Delete", 
+                    {:action => 'delete', :id => act.id,}, :method => 'delete',
+                    data: {:confirm => "Are you sure you want to delete #{@actTypes.name}?"},
                     :class => 'delitem' %>
             </p>
             <br>
