--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,14 @@ a {
     padding: 16px 8px;
     border-radius: 12px;
 }
+input {
+    border-radius: 10px;
+    border: 3px solid #66ccff;
+}
+
+.submitbutton {
+    
+}
 
 #headercontainer {
     display: flex;
