--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,7 +38,10 @@ input {
 }
 
 .submitbutton {
-    
+    border-radius: 5px !important;
+    border: 1px solid #77ccff !important;
+    background: #77ccff;
+    margin-top: 15px;
 }
 
 #headercontainer {
