--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -37,6 +37,11 @@ input {
     border: 3px solid #66ccff;
 }
 
+select {
+    border-radius: 10px;
+    border: 3px solid #66ccff;
+}
+
 .submitbutton {
     border-radius: 5px !important;
     border: 1px solid #77ccff !important;
