Revert "Fixed a bug in the show method for activities."
This reverts commit 533d09e82323b9ad33690940b7efee374c7ed664.

--- a/app/views/activity/show.html.erb
+++ b/app/views/activity/show.html.erb
@@ -15,8 +15,8 @@
             <br>
             <p class="delete">
                 <%= link_to "Delete", 
-                    {:action => 'delete', :id => @act.id,}, :method => 'delete',
-                    data: {:confirm => "Are you sure you want to delete #{@actType.name}?"},
+                    {:action => 'delete', :id => act.id,}, :method => 'delete',
+                    data: {:confirm => "Are you sure you want to delete #{@actTypes.name}?"},
                     :class => 'delitem' %>
             </p>
             <br>
