--- a/app/views/activity/edit.html.erb
+++ b/app/views/activity/edit.html.erb
@@ -9,7 +9,7 @@
                 <p><label for = "activity_type">Select Activity Type: </label></p>
                 <%= collection_select(:activity, :actid, @actTypes, :id, :name, :selected => @actType.id) %>
                 <p>Activity Duration: <%= a.number_field 'duration', :value => @act.duration, :step => 'any' %></p>
-                <p>Activity Performed By: <%= a.text_field 'user', :value => @act.user %></p>
+                <p><%= a.hidden_field 'userid', :value => @user_id %></p>
                 <br>
                 <%= a.submit "Save Changes", :class => 'submitbutton' %>
             <% end %>
