some sizing and placement of front page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,7 @@ a {
 input {
     border-radius: 10px;
     border: 3px solid #66ccff;
+    
 }
 
 select {
@@ -65,10 +66,14 @@ select {
 }
 .pagetitle {
     text-align: center;
+    font-size: 30px;
+    padding-top: 50px;
 }
 .headerchild {
     padding: 5px;
     flex: 1;
+    color: yellow;
+    
 }
 .lalign {
     text-align: left;
